<resources>
    <string name="app_name">Calculator</string>
    <string name="title">Calculator</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="result">Result</string>
    <string name="btn_add">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_multiply">x</string>
    <string name="btn_divided">/</string>
</resources>
