<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/first_number"
            android:textSize="25sp"/>
        
        <EditText
            android:id="@+id/edit_first_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="40dp"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/second_number"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/edit_second_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginLeft="7dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:text="@string/btn_add"/>

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:text="@string/btn_minus"/>

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:text="@string/btn_multiply"/>

        <Button
            android:id="@+id/btn_divided"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:text="@string/btn_divided"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:text="@string/result"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/result_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:layout_marginLeft="120dp"
            android:textSize="25sp"
            android:textColor="@color/colorPurple"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>